# gods-eye

./: .gitignore  CHANGELOG.md  CLAUDE.md  DISCLAIMER.md  README.md  main.py  pyproject.toml  requirements.txt  setup.bat  setup.py  setup.sh
.github/workflows/: ci.yml
config/: config.yaml
config/wordlists/: endpoints.txt  passwords.txt  subdomains.txt
core/: orchestrator.py
modules/: ad.py  ai_engine.py  cve.py  default_creds.py  dirbrute.py  fingerprint.py  gods_eye_bridge.py  jwt_analyzer.py  msf_bridge.py  opsec.py  real_ip.py  recon.py  screenshot.py  shodan_recon.py  subdomain.py  waf_bypass.py  web.py
output/: pdf_export.py  report.py
tests/: test_fingerprint.py  test_real_ip.py  test_recon.py  test_report.py  test_web.py
utils/: logger.py
