[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-attack-orchestrator"
version = "1.0.0"
description = "AI-powered penetration testing and red team automation tool"
authors = [{name = "alisalive"}]
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "typer>=0.9.0",
    "aiohttp>=3.9.0",
    "anthropic>=0.25.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "dnspython>=2.4.0",
    "playwright>=1.40.0",
    "ldap3>=2.9.0",
    "PyYAML>=6.0.0",
    "packaging>=23.0",
]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
godseye = "main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
